// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pbehavior-comments-field Renders \`pbehavior-comments-field\` with custom props 1`] = `
<div>
  <pbehavior-comment-field-stub
    comment="[object Object]"
    max="255"
  />
  <pbehavior-comment-field-stub
    comment="[object Object]"
    max="255"
  />
  <div
    class="layout row"
  >
    <button
      class="ml-0 primary v-btn theme--light"
      type="button"
    >
      <div
        class="v-btn__content"
      >
        Add comment
      </div>
    </button>
  </div>
</div>
`;

exports[`pbehavior-comments-field Renders \`pbehavior-comments-field\` with default props 1`] = `
<div>
  <div
    class="layout row"
  >
    <button
      class="ml-0 primary v-btn theme--light"
      type="button"
    >
      <div
        class="v-btn__content"
      >
        Add comment
      </div>
    </button>
  </div>
</div>
`;
